# pa_bot

./: Cargo.toml  error.txt
src/: cli.rs  demo.rs  gamma.rs  live.rs  main.rs  time.rs
src/config/: markets.rs
src/engine/: mod.rs  router.rs  stats.rs
src/ingest/: mod.rs  pipeline.rs  writer.rs
src/markets/: lifecycle.rs  manager.rs
src/metrics/: microstructure.rs  mod.rs  summary.rs
src/orderbook/: book.rs  imbalance.rs  mod.rs
src/ws/: client.rs  messages.rs
