[package]
name = "pa_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
dashmap = "5"
chrono = "0.4"
questdb-rs = "3"   # ILP client
crossbeam = "0.8"
log = "0.4"
env_logger = "0.11"
ordered-float = "4.0"
